# L0C0B0T

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml
l0c0b0t_macros/: Cargo.toml
l0c0b0t_macros/src/: lib.rs  parsers.rs
src/: client.rs  framework.rs  globals.rs  lib.rs  main.rs  mod.rs  utils.rs
src/commands/: mod.rs  sube_baja.rs  testing.rs
src/commands/music/: channels.rs  errors.rs  mod.rs  play.rs  queue.rs  responses.rs  settings.rs  utils.rs
src/framework/: command.rs  handler.rs  mod.rs  settings.rs  utils.rs
