[package]
name = "l0c0b0t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = "0.11.5"
itertools = "0.10.5"
songbird = { version = "0.3.0", features = ["builtin-queue", "yt-dlp"] }
regex = "1.7.1"
lazy_static = "1.4.0"
async-trait = "0.1.63"