[package]
name = "l0c0b0t"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = "0.11.5"
itertools = "0.10.5"
songbird = { version = "0.3.0", features = ["builtin-queue", "yt-dlp"] }
regex = "1.7.1"
lazy_static = "1.4.0"
async-trait = "0.1.63"
rand = "0.8.5"
l0c0b0t_macros = { path = "./l0c0b0t_macros" }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8"
